FIX: fixed images not covering properly on different browsers

--- a/app/assets/stylesheets/listings.scss
+++ b/app/assets/stylesheets/listings.scss
@@ -65,6 +65,7 @@ h2{
     height: 100%;
     width: 100%;
     object-fit: cover;
+    background-size: cover;
   }
   .prf-pic {
     grid-area: prf_pic;
